src/test/deca/context/valid/class/20-acceToMethodeByExtends.deca
/* Description:
    Déclarer une class extends et utilisation des méthodes hériter

    Historique:
      cree le 20/01/2020
    Sortie attendu:
     decac ne doit afficher rien
*/

class A {
    protected int x;
    protected float y;

    void setX(int a){
      if (a != 0){
        this.x = a;
      } else {
        println("x doiit être different de zero");
      }
    }
}
class B extends A{
  void setY(float c){
    this.y = c;
  }
}
{
    B b = new B();
    b.setX(9);
    b.setY(0.0);
}
